<resources>
  <string name="app_name">Kiddo Go</string>
  <string name="title_play">Play</string>
  <string name="title_dashboard">Dashboard</string>
  <string name="title_settings">Settings</string>
  <string name="user_name">Noam</string>
  <string name="page_2_text">Brush your teeth.</string>
  <string name="page_1_text">Get dressed.</string>
  <string name="page_3_text">Make your bed.</string>
  <string name="page_4_text">Put your shoes on.</string>
  <string name="page_5_text">Get your backpack ready.</string>
  <string name="title_activity_screen_pager">ScreenPagerActivity</string>
  <string name="title_home">Home</string>
  <string name="title_notifications">Notifications</string>

  <string name="activity_time_elapsed_key">activity_time_elapsed</string>

  <string name="clock_format">%1$d:%2$04.1f</string>
  <string name="monday">Monday</string>
  <string name="tuesday">Tuesday</string>
  <string name="thursday">Thursday</string>
  <string name="friday">Friday</string>
  <string name="wednesday">Wednesday</string>
  <string name="results_activity_title">Results</string>
  <string name="settings_activity_title">Settings</string>
  <string name="star">Gold Star</string>
  <string name="x">Red X</string>
  <string name="authentication_error">Authentication Error</string>
  <string name="step1">Get dressed.</string>
  <string name="step2">Brush your teeth.</string>
  <string name="step3">Make your bed.</string>
  <string name="step4">Put your shoes on.</string>
  <string name="step5">Get your backpack ready.</string>
  <string name="default_msg">Good morning!</string>

</resources>
